themes/SL/static/css/base.css
/* ... */
sub,
sup {
    background-color: #f8f8ff;
    border: 1px dashed #E0E0E0;
    font-size: 0.9rem;
    padding: 0.1em;
    position: inherit;
}

ul#post-list>li {
    list-style-type: none;
}

figure {
    background: #fff;
    overflow: hidden;
}

.hover-img {
    -moz-transition: .3s ease-in-out;
    -o-transition: .3s ease-in-out;
    -webkit-transition: .3s ease-in-out;
    opacity: 1;
    transition: .3s ease-in-out;
}

.hover-img:hover {
    color: #fff;
    opacity: .5;
}

.always-white:visited {
    color: #DFE5EB;
}

.always-white-no-margin:visited {
    color: #DFE5EB;
}

.always-white:hover {
    color: #8096AF;
}

.always-white-no-margin:hover {
    color: #8096AF;
}

.categories-align {
    position: absolute;
    right: 1em;
}

.menu-categories-legend {
    color: #fff;
    margin-right: 1rem;
}

.uppercase-title {
    font-size: 2rem;
    text-transform: uppercase;
}

.lowercase-title {
    text-transform: lowercase;
}

.img-categories {
    bottom: 30%;
    display: none;
    position: absolute;
    right: 3%;
}

#index {
    background-color: #CEDBD9;
    color: #1D1D1E;
}

.brand-link {
    display: contents;
}

.brand-logo {
    max-width: 40px;
    padding: 5px;
}

.nav-link-smaller {
    font-size: 1.2rem;
}

.nav-link-smallest {
    font-size: 1.0rem;
}

#menu {
    background-color: #002e5f;
    display: block;
    text-align: right;
    width: 100%;
}

.extra-space {
    margin: 0.25rem 0;
}

.emphasis {
    background-color: rgba(0, 123, 255, 0.1);
    border: 1px solid rgba(0, 46, 95, 0.5);
    font-weight: bold;
    margin-left: 0.5em;
    margin-top: 0.4rem;
    padding: 0.2rem 0.5rem;
    text-transform: lowercase;
    transition: 0.5s ease;
}

.emphasis:hover {
    background-color: rgba(0, 123, 255, 0.3);
    border: 1px solid #7e7e7e;
}

.copy-left {
    -moz-transform: scaleX(-1);
    -ms-filter: “FlipH”;
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    display: inline-block;
    filter: FlipH;
    margin: 0;
    text-align: right;
    transform: scaleX(-1);
}

.no-li-marker {
    list-style: none;
}

.tags {
    margin-bottom: 1rem;
    margin-top: 1rem;
    line-height: 2.25em;
}

.tags-index {
    margin-bottom: 1rem;
    margin-top: 1rem;
}

.inline-icon {
    display: inline-block;
    float: right;
}

::-moz-selection {
    /* Code for Firefox */
    background: #007bff;
    color: #ffffff;
}

::selection {
    background: #007bff;
    color: #ffffff;
}

nav i {
    color: #ffffff;
}

i {
    color: #002e5f;
    margin-left: 0.2em;
    margin-right: 0.3em;
}

.i-categories-align {
    margin-right: 0.2em;
    color: #006BFF;
}

#bg-darker {
    background-color: #000000;
    text-shadow: 0 0 1px black;
    background-image: url("/theme/images/header/abstract_path.svg");
    background-position-x: 0;
    background-position-y: 100px;
    background-repeat: no-repeat;
    background-size: 40%;
}


.only-big-screen {
    display: none;
}

dd {
    margin-bottom: 2em;
}

dl {
    line-height: 1.25;
}

/* end BASE TEMPLATE */

/* SCROLLBAR */
body::-webkit-scrollbar {
    background-color: #ffffff;
    width: 0;
}

body::-webkit-scrollbar:hover {
    background-color: #e9ecef;
}

body::-webkit-scrollbar-track {
    -moz-box-shadow: inset 0 0 6px #ffffff;
    -webkit-box-shadow: inset 0 0 6px #ffffff;
    box-shadow: inset 0 0 6px #ffffff;
}

body::-webkit-scrollbar-thumb {
    background-color: #007bff;
    outline: 1px solid #ffffff;
}

/* end SCROLLBAR */

/* FOOTER */
.footer-borders {
    background-image: url("/theme/images/footer/contributions.svg");
    background-repeat: repeat;
    padding: 12px 0;
}

#contentinfo {
    background-color: #000000;
    border-bottom: 1px solid #cedbd9;
    border-top: 1px solid #cedbd9;
    color: #CEDBD9;
    display: table;
    font-size: 0.8rem;
    margin: 10px 0 10px 0;
    padding: 25px 0 25px 0;
    position: relative;
    text-align: center;
    width: 100%;
}

address {
    display: table-cell;
    font-style: normal;
    line-height: inherit;
    padding: 15px;
    text-shadow: 0 0 3px black;
    vertical-align: middle;
}

.footer-icons {
    display: table-header-group;
}

#contentinfo a:hover {
    color: #C6D7E0;
}

.hover-footer-bg {
    -moz-transition: .3s ease-in-out;
    -webkit-transition: .3s ease-in-out;
    opacity: 1;
    transition: .3s ease-in-out;
}

.hover-footer-bg:hover {
    color: #fff;
}

.get-in-touch-icons {
    display: inline-flex;
}

#author-footer li {
    display: inline-flex;
    height: 16px;
    list-style: none;
    padding-left: 5px;
    width: 16px;
}

#author-footer li a img {
    height: 16px;
    width: 16px;
}

.version-footer {
    background-color: #fff;
    border: 1px #cedbd9 solid;
    bottom: 0.25em;
    color: #000;
    font-family: monospace;
    font-size: 0.7rem;
    letter-spacing: 0.10rem;
    padding-left: 0.3em;
    padding-right: 0.3em;
    position: absolute;
    right: 0.25em;
}

.mini-icon {
    height: 1rem;
    width: auto;
}

footer .social-footer {
    list-style: none;
    padding: 10px;
}

footer .social-footer li {
    display: inline-flex;
    margin: 0 10px;
}

footer .social-footer li:hover a {
    color: #ffffff;
}

footer a img {
    -moz-transition: .3s ease;
    -webkit-transition: .3s ease;
    height: 32px;
    margin: 0 5px;
    opacity: 1;
    transition: 0.3s ease;
    width: 32px;
}

footer a img:hover {
    -moz-filter: drop-shadow(0px 0 10px #134d6b);
    -webkit-filter: drop-shadow(0px 0 10px #134d6b);
    -webkit-filter: drop-shadow(0px 0 10px #134d6b);
    filter: drop-shadow(0px 0 10px #ffffff8a);
    opacity: 0.9;
}

div#author-footer {
    margin-top: 1.5rem;
}

/* end FOOTER */

/* ARTICLE PAGE */
.category-article {
    display: block;
}

.max-size-img-post {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 90%;
}

.max-size-img-profile {
    display: block;
    margin-left: auto;
    margin-right: auto;
    max-width: 60%;
}

#contentinfo a {
    color: #fff;
}
/* ... */

